app/assets/stylesheets/DocumentSet/index/import-mass-upload.less
@import-once "../../mixins.less";

#import-from-mass-upload {
  ul {
    padding: 0;
    list-style: none;
    max-height: 20em;
    overflow: auto;
    margin: 1em 0;
    background: @darkBodyBackground;
    box-shadow: inset 0 -18px 40px -30px black;
    border: 1px solid @mutedShadeColor;
    display: inline-block;
    padding: 0.5em;
    width: 35em;
    min-height: 9em;
  }

  li {
    line-height: 1.4em;
    height: 1.4em;
    margin: .1em 1em;

    i {
      margin-right: 1em;
      margin-top: 3px;
      float: left;
    }
  }

  li.empty-upload {
    color: @mutedShadeColor;
    text-align: center;
    margin-top: 1em;

    i {
      display: block;
      margin: 0;
      float: none;
      font-size: 5em;
    }
  }

  .controls {
    width: 36em;

    .right-controls {
      width: 20em;
      float: right;
    }

    .cancel {
      display: inline-block;
      float: left;
    }

    .choose-options {
      display: inline-block;
      float: right;
    }

    .upload-prompt {
      position: relative;
      display: inline-block;

      .invisible-file-input {
        opacity: 0;
        cursor: pointer;
        position: absolute;
        left: 0;
        right: 0;
        top: 0;
        bottom: 0;
      }
    }

    .upload-submit {
      display: inline-block;
    }
  }

  .wait-for-import {
    display: none;
    margin-top: 4em;
    width: 35em;
    text-align: center;
  }

  .waiting {
    .muted;
  }

  .uploading {
    .filename {
      font-weight: bold;
    }
  }

  .uploaded {
    color: @successColor;
  }
}

